--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,10 @@
     "@angular/platform-browser-dynamic": "^17.3.8",
     "@angular/router": "^17.3.8",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "ag-grid-angular": "^31.3.2",
+    "ag-grid-community": "^31.3.2",
+    "handsontable": "^14.3.0",
+    "@handsontable/angular": "^14.3.0",
     "@types/crypto-js": "^4.2.2",
     "@types/pako": "^2.0.3",
     "crypto-js": "^4.2.0",
