--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "ag-grid-angular": "^31.3.2",
     "ag-grid-community": "^31.3.2",
+    "ag-grid-enterprise": "^31.3.2",
     "handsontable": "^14.3.0",
     "@handsontable/angular": "^14.3.0",
     "@types/crypto-js": "^4.2.2",
